syntax = "proto3";
package demo;


service DemoService {

    rpc SayHello (DemoRequst) returns (DemoResponse) {}

}
message DemoRequst {

    string name = 1;
}

message DemoResponse {

    string text = 1;
}
